Fixed style of profile on member list to wrap on edge

--- a/fuel/app/assets/less/base.less
+++ b/fuel/app/assets/less/base.less
@@ -347,7 +347,7 @@ table.image_table {
 }
 
 .profile,
-#article_list {
+.article {
 	.article-right {
 		.wrap
 	}
